# awidgets

./: .gitignore  README.md  alembic.ini  init_db.py  prestart-pip.sh  prestart-poetry.sh  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: fadd69bfd241_add_widgets_table.py
awidgets/: main.py
awidgets/core/: constants.py
awidgets/models/: __init__.py  widget.py
awidgets/repositories/: widgets_repository.py
awidgets/schemas/: __init__.py  widget.py
awidgets/services/: db.py
tests/: conftest.py  test_widgets.py  utils.py
