[tool.poetry]
name = "awidgets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
alembic = {extras = ["tz"], version = "^1.8.1"}
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.15.0"
mypy = "^0.971"
black = "^22.6.0"
bandit = "^1.7.4"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
sqlalchemy-stubs = "^0.4"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
requests = "^2.28.1"

[tool.pylint.main]
init-hook = """import os, sys
from pylint.config import find_default_config_files
for item in find_default_config_files():
    sys.path.append(os.path.dirname(item))
"""

extension-pkg-whitelist = ["pydantic"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "too-few-public-methods"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
